...
      const val MESSAGE_FIELD = "messageField"
      const val CURRENT_LOCATION = "currentLocation"
    }

    /** Constants for tagging UI components specific to the CreateAlertScreen * */
    object CreateAlertScreen {
      const val SCREEN = "createAlertScreen"
      const val SUBMIT_BUTTON = "submitButton"
    }

    /** Constants for tagging UI components specific to the EditAlertScreen */
    object EditAlertScreen {
      const val SCREEN = "editAlertScreen"
      const val DELETE_BUTTON = "deleteButton"
      const val SAVE_BUTTON = "saveButton"
      const val RESOLVE_BUTTON = "resolveButton"
    }

    /** Constants for tagging UI components in the AlertListsScreen. */
    object AlertListsScreen {
...
      const val RESOLVE_ALERT_BUTTON = "resolveAlertButton"
      const val ACCEPT_ALERT_BUTTON = "acceptAlertButton"
    }

    /** Constants for tagging UI components in the BottomNavigationMenu. */
    object BottomNavigationMenu {
      const val BOTTOM_NAVIGATION_MENU = "bottomNavigationMenu"
      const val BOTTOM_NAVIGATION_MENU_ITEM = "bottomNavigationMenu"
      const val CONNECTIVITY_BANNER = "connectivityBanner"
      const val CONNECTIVITY_BANNER_TEXT = "connectivityBannerText"
    }

    /** Constants for tagging UI components in the TopAppBar. */
    object TopAppBar {
      const val TOP_BAR = "topBar"
      const val GO_BACK_BUTTON = "goBackButton"
      const val SETTINGS_BUTTON = "settingsButton"
      const val CHAT_BUTTON = "chatButton"
      const val EDIT_BUTTON = "editButton"
      const val TITLE_TEXT = "titleText"
    }

    /** Constants for tagging UI components in the profile screens. */
    object ProfileScreens {
      /** Constants for tagging UI components in the CreateProfileScreen. */
      object CreateProfileScreen {
        const val SCREEN = "createProfileScreen"
        const val FILTER_RADIUS_EXPLANATION_TEXT = "filterRadiusExplanationText"
      }

      /** Constants for tagging UI components in the EditProfileScreen. */
      object EditProfileScreen {
        const val SCREEN = "editProfileScreen"
        const val EDIT_PROFILE_PICTURE = "editProfilePicture"
...
      const val DESCRIPTION_INPUT_FIELD = "descriptionInputField"
      const val SAVE_BUTTON = "saveButton"
    }

    object SettingsScreen {
      const val SCREEN = "settingsScreen"
      const val REMARK_CONTAINER = "remarkContainer"
      const val REMARK_TEXT = "remarkText"
      const val SLIDER_CONTAINER = "sliderContainer"
      const val ACCOUNT_MANAGEMENT_CONTAINER = "accountManagementContainer"
      const val THEME_DROP_DOWN_MENU = "themeDropdownMenu"
      const val PASSWORD_TEXT = "passwordText"
      const val PASSWORD_ICON = "passwordIcon"
      const val SIGN_OUT_TEXT = "signOutText"
      const val SIGN_OUT_ICON = "signOutIcon"
      const val DELETE_ACCOUNT_TEXT = "deleteAccountText"
      const val DELETE_ACCOUNT_ICON = "deleteAccountIcon"
      const val DELETE_ACCOUNT_CARD = "deleteCard"
      const val CARD_EMOJI_ICON = "deleteEmojiIcon"
      const val CARD_TEXT = "deleteText"
      const val DELETE_BUTTON = "deleteButton"
      const val NOT_DELETE_BUTTON = "notDeleteButton"
    }

    /** Constants for tagging UI components in the TimerScreen. */
    object TimerScreen {
      const val SCREEN = "timerScreen"
      const val DISPLAYED_TEXT = "displayedText"
...
