...
    <string name="sign_up_toast_invalid_attempt">Invalid email or password</string>

    <string name="sign_up_not_matching_password_error_message">Passwords do not match</string>

    <!-- Create Profile Screen -->
    <string name="create_profile_screen_title">Create Your Account</string>
    <string name="create_profile_radius_explanation_text">
        By specifying this radius, you can control the geographical range for receiving alerts from other users.
    </string>

    <!-- Edit Profile Screen -->
    <string name="edit_profile_screen_title">Edit Your Profile</string>

...
    <string name="profile_new_user">New user</string>
    <string name="profile_number_interaction_text">Number of interactions: </string>
    <string name="profile_reviews_title">Reviews</string>
    <string name="profile_no_reviews_text">No reviews yet...</string>

    <!-- Settings Screen -->
    <string name="settings_screen_title">My Settings</string>

    <string name="notifications_and_location_text">To enable/disable notifications or location, please go to your phone\'s settings</string>

    <string name="settings_account_password">Change Password</string>
    <string name="settings_account_sign_out">Sign Out</string>
    <string name="settings_account_delete">Delete Account</string>

    <string name="settings_dialog_text">Are you sure you want to delete your account?</string>
...
